--- a/acme_project/templates/birthday/birthday.html
+++ b/acme_project/templates/birthday/birthday.html
@@ -1,5 +1,15 @@
 {% extends "base.html" %}
 
 {% block content %}
-
-{% endblock %}
+  <form>
+    <table>
+        {{ form }}
+    </table>
+    <input type="submit" value="Submit">
+  </form>
+  {% with data=request.GET %}
+    {% if data %}
+      <h2>Привет, {{ data.first_name }} {{ data.last_name }}</h2>
+    {% endif %}
+  {% endwith %}
+{% endblock %} 
